crates/data-dict/tests/snapshots/validate_spec__constraints_s20_unknown_column.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: a
        type: number
        examples: [1, 2]
    constraints:
      - assert: a > b
────────────────────────────────────────
error[S20]: An assertion may only reference columns of its table.
  --> dict.yaml:10:21
   |
LL |   - name: t
...
LL |       - assert: a > b
   |                     ^ column `b` is not on this table
